--- a/portfolio.html
+++ b/portfolio.html
@@ -246,6 +246,24 @@
                         </li>
                     </ul>
                 </div>
+                <div class="subscribe-box">
+                    <p class="subscribe-text">
+                        Подпишитесь на рассылку
+                    </p>
+                    <form class="subscribe-form">
+                        <label for="">
+                            <input type="email" name="user-mail" placeholder="E-mail" class="subscribe-input">
+                        </label>
+                        <button class="subscribe-btn" type="button">
+                            <span class="subscribe-btn-text">
+                                Подписаться
+                            </span>
+                            <svg class="subscribe-btn-icon">
+                                <use href="./images/icons.svg#icon-send">
+                            </svg>
+                        </button>
+                    </form>
+                </div>
             </div>
         </div>
     </footer>
